feat(ui): POC of the first native ui figma

--- a/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
@@ -27,7 +27,7 @@
                 Grid.Row="0" 
                 VerticalAlignment="Top"
                 >
-            <Grid Height="40" VerticalAlignment="Top" Margin="16,4" Padding="0,0,130,0">
+            <Grid Height="40" VerticalAlignment="Top" Margin="16,4" Padding="0,0,120,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <!-- Left: Logo + Text -->
@@ -64,9 +64,9 @@
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     CornerRadius="3"
-                    BorderThickness="1"
-                    QuerySubmitted="AutoSuggestBox_QuerySubmitted"
-                    />
+                    Background="{ThemeResource TextControlBackground}"
+                    BorderBrush="{ThemeResource TextControlBorderBrush}"
+                    BorderThickness="1" />
 
                 <!-- Right: Profile Picture -->
                 <PersonPicture
@@ -91,27 +91,20 @@
                     <DropDownButton Margin="10" Background="Transparent" BorderBrush="Transparent">
                         <DropDownButton.Content>
                             <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="{x:Bind DriveSelector.SelectedDrive.Name, Mode=OneWay}" Margin="10,0"/>
+                                <ImageIcon Source="/Assets/kdrive.png" Height="20" />
+                                <TextBlock Text="Infomaniak" Margin="10,0"/>
                             </StackPanel>
                         </DropDownButton.Content>
                         <DropDownButton.Flyout>
-                            <MenuFlyout Placement="BottomEdgeAlignedLeft" x:Name="DriveSelection">
-                                <MenuFlyoutItem Text="Drive">
+                            <MenuFlyout Placement="BottomEdgeAlignedLeft">
+                                <MenuFlyoutItem Text="Hervé">
                                     <MenuFlyoutItem.Icon>
-                                        <ImageIcon>
-                                            <ImageIcon.Source>
-                                                <SvgImageSource UriSource="/Assets/drive.svg" />
-                                            </ImageIcon.Source>
-                                        </ImageIcon>
+                                        <ImageIcon Source="/Assets/kdrive.png" />
                                     </MenuFlyoutItem.Icon>
                                 </MenuFlyoutItem>
-                                <MenuFlyoutItem Text="{x:Bind DriveSelector.SelectedDrive.Name, Mode=OneWay}">
+                                <MenuFlyoutItem Text="Clément">
                                     <MenuFlyoutItem.Icon>
-                                        <ImageIcon>
-                                            <ImageIcon.Source>
-                                                <SvgImageSource UriSource="/Assets/drive.svg" />
-                                            </ImageIcon.Source>
-                                        </ImageIcon>
+                                        <ImageIcon Source="/Assets/kdrive.png" />
                                     </MenuFlyoutItem.Icon>
                                 </MenuFlyoutItem>
                                 <MenuFlyoutItem Text="Mathilde">
