--- a/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
@@ -10,34 +10,104 @@
     Title="kDrive client">
 
     <Window.SystemBackdrop>
-        <MicaBackdrop />
+        <!--<DesktopAcrylicBackdrop/>-->
+        <MicaBackdrop Kind="BaseAlt"/>
+        <!--<MicaBackdrop Kind="Base"/>-->
     </Window.SystemBackdrop>
-
     <Grid>
-        <NavigationView x:Name="nvSample" IsPaneToggleButtonVisible="False" IsBackButtonVisible="Collapsed">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <!-- Title bar -->
+            <RowDefinition Height="*"/>
+            <!-- Remaining space for NavigationView -->
+        </Grid.RowDefinitions>
+
+        <!-- Title bar -->
+        <Border x:Name="AppTitleBar" 
+                Grid.Row="0" 
+                VerticalAlignment="Top"
+                >
+            <Grid Height="40" VerticalAlignment="Top" Margin="16,4" Padding="0,0,120,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <!-- Left: Logo + Text -->
+                    <ColumnDefinition Width="*"/>
+                    <!-- Middle: Search Box (centered) -->
+                    <ColumnDefinition Width="Auto"/>
+                    <!-- Right: Profile Picture -->
+                </Grid.ColumnDefinitions>
+
+                <!-- Left: Logo + App Name -->
+                <StackPanel Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Center" Spacing="8">
+                    <Image Source="/Assets/kdrive.png" Height="28" Width="28" />
+                    <TextBlock x:Name="AppTitle"
+                        Text="kDrive"
+                        FontSize="14"
+                        FontWeight="SemiBold"
+                        VerticalAlignment="Center"/>
+                    <TextBlock x:Name="AppTitle_preview"
+                        Text="preview"
+                        FontSize="10"
+                        FontWeight="Light"
+                        VerticalAlignment="Center"
+                        Foreground="OrangeRed"
+                               />
+                </StackPanel>
+
+                <!-- Middle: Search Box (centered in its column, which takes remaining space) -->
+                <AutoSuggestBox
+                    x:Uid="SearchBox"
+                    Grid.Column="1"
+                    QueryIcon="Find"
+                    Width="300"
+                    Height="32"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    CornerRadius="3"
+                    Background="{ThemeResource TextControlBackground}"
+                    BorderBrush="{ThemeResource TextControlBorderBrush}"
+                    BorderThickness="1" />
+
+                <!-- Right: Profile Picture -->
+                <PersonPicture
+                    Grid.Column="2"
+                    ProfilePicture="https://learn.microsoft.com/windows/uwp/contacts-and-calendar/images/shoulder-tap-static-payload.png"
+                    Height="24" Width="24"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Right"/>
+            </Grid>
+        </Border>
+
+        <!-- NavigationView takes remaining space -->
+        <NavigationView x:Name="nvSample" 
+                        Grid.Row="1"
+                        IsBackButtonVisible="Collapsed"
+                        PaneDisplayMode="Left"
+                        SelectionChanged="nvSample_SelectionChanged"
+                        >
+
             <NavigationView.PaneCustomContent>
                 <StackPanel>
-                    <Image Source="/Assets/logo/logo-with-text.png" MaxWidth="200" HorizontalAlignment="Left" Margin="10,20,0,0" />
-                    <DropDownButton Margin="10" Visibility="Visible" Background="Transparent" BorderBrush="Transparent">
+                    <DropDownButton Margin="10" Background="Transparent" BorderBrush="Transparent">
                         <DropDownButton.Content>
                             <StackPanel Orientation="Horizontal">
                                 <ImageIcon Source="/Assets/kdrive.png" Height="20" />
-                                <TextBlock Text="kDrive d'Infomaniak" Margin="10.0"/>
+                                <TextBlock Text="Infomaniak" Margin="10,0"/>
                             </StackPanel>
                         </DropDownButton.Content>
                         <DropDownButton.Flyout>
                             <MenuFlyout Placement="BottomEdgeAlignedLeft">
-                                <MenuFlyoutItem Text="kDrive d'Hervé">
+                                <MenuFlyoutItem Text="Hervé">
                                     <MenuFlyoutItem.Icon>
                                         <ImageIcon Source="/Assets/kdrive.png" />
                                     </MenuFlyoutItem.Icon>
                                 </MenuFlyoutItem>
-                                <MenuFlyoutItem Text="kDrive de Clément">
+                                <MenuFlyoutItem Text="Clément">
                                     <MenuFlyoutItem.Icon>
                                         <ImageIcon Source="/Assets/kdrive.png" />
                                     </MenuFlyoutItem.Icon>
                                 </MenuFlyoutItem>
-                                <MenuFlyoutItem Text="kDrive desktop test">
+                                <MenuFlyoutItem Text="Mathilde">
                                     <MenuFlyoutItem.Icon>
                                         <ImageIcon Source="/Assets/kdrive.png" />
                                     </MenuFlyoutItem.Icon>
@@ -47,12 +117,33 @@
                     </DropDownButton>
                 </StackPanel>
             </NavigationView.PaneCustomContent>
+
             <NavigationView.MenuItems>
-                <NavigationViewItem x:Uid="NavHome" Icon="Home" Tag="SamplePage1" MinHeight="50" IsSelected="True"/>
-                <NavigationViewItem x:Uid="NavActivity" Icon="Sync" Tag="SamplePage2" MinHeight="50" IsEnabled="False"/>
-                <NavigationViewItem x:Uid="NavStorage" Icon="MapDrive" Tag="SamplePage3" MinHeight="50" IsEnabled="False"/>
-                <NavigationViewItem x:Uid="NavFolder" Icon="Folder" Tag="SamplePage4" MinHeight="50" IsEnabled="False"/>
+                <NavigationViewItem x:Uid="NavHome" Tag="HomePage" MinHeight="30" IsSelected="True">
+                    <NavigationViewItem.Icon>
+                        <SymbolIcon Symbol="Home" Foreground="{ThemeResource AccentAAFillColorDefaultBrush}"/>
+                    </NavigationViewItem.Icon>
+                </NavigationViewItem>
+                <NavigationViewItem x:Uid="NavActivity" Tag="SamplePage2" MinHeight="30">
+                    <NavigationViewItem.Icon>
+                        <SymbolIcon Symbol="Sync" Foreground="{ThemeResource AccentAAFillColorDefaultBrush}"/>
+                    </NavigationViewItem.Icon>
+                    <NavigationViewItem.InfoBadge>
+                        <InfoBadge x:Name="infoBadge1" Value="4"/>
+                    </NavigationViewItem.InfoBadge>
+                </NavigationViewItem>
+                <NavigationViewItem x:Uid="NavStorage" Tag="SamplePage3" MinHeight="30" IsEnabled="False">
+                    <NavigationViewItem.Icon>
+                        <SymbolIcon Symbol="MapDrive" Foreground="{ThemeResource AccentAAFillColorDefaultBrush}"/>
+                    </NavigationViewItem.Icon>
+                </NavigationViewItem>
+                <NavigationViewItem x:Uid="NavFolder" Tag="SamplePage4" MinHeight="30" IsEnabled="False">
+                    <NavigationViewItem.Icon>
+                        <SymbolIcon Symbol="Folder" Foreground="{ThemeResource AccentAAFillColorDefaultBrush}"/>
+                    </NavigationViewItem.Icon>
+                </NavigationViewItem>
             </NavigationView.MenuItems>
+
             <Frame x:Name="contentFrame"/>
         </NavigationView>
     </Grid>
