feat(msi installer): Add shellExt files

--- a/installer/windows/kDriveInstaller/Folders.wxs
+++ b/installer/windows/kDriveInstaller/Folders.wxs
@@ -1,6 +1,6 @@
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
   <Fragment>
-    <StandardDirectory Id="ProgramFiles6432Folder">
+    <StandardDirectory Id="ProgramFiles64Folder">
       <Directory Id="INSTALLFOLDER" Name="!(bind.Property.ProductName)">
         <Directory Id="I18NFOLDER" Name="i18n" />
         <Directory Id="ICONENGINESFOLDER" Name="iconengines" />
@@ -12,7 +12,17 @@
         <Directory Id="TRANSLATIONSFOLDER" Name="translations" />
         <Directory Id="RESSOURCESFOLDER" Name="ressources"/>
         <Directory Id="STYLEFOLDER" Name="style"/>
-      </Directory>        
+        <Directory Id="SHELLEXTFOLDER" Name="shellext">
+          <Directory Id="APPXFOLDER" Name="AppX">
+            <Directory Id="APPXDEPENDENCIESFOLDER" Name="Dependencies">
+              <Directory Id="APPXDEPENDENCIESx64FOLDER" Name="x64"/>
+              <Directory Id="APPXDEPENDENCIESx86FOLDER" Name="x86"/>
+              <Directory Id="APPXDEPENDENCIESARMFOLDER" Name="ARM"/>
+            </Directory>
+          </Directory>
+        </Directory>
+      </Directory>
     </StandardDirectory>
+    <StandardDirectory Id="SystemFolder"/>
   </Fragment>
 </Wix>
