--- a/installer/windows/kDriveInstaller/Package.wxs
+++ b/installer/windows/kDriveInstaller/Package.wxs
@@ -1,8 +1,12 @@
 ﻿<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
-  <Package Id="Infomaniak_Network_SA.kDriveInstaller" Name="kDrive" Manufacturer="Infomaniak Network SA" Version="$(shortVersion).0" InstallerVersion="301">
+  <!-- /!\ DO NOT CHANGE THE PACKAGE ID /!\ It uniquely identify the app on client devices -->
+  <Package Id="Infomaniak_Network_SA.kDrive" Name="kDrive" Manufacturer="Infomaniak Network SA" Version="$(shortVersion).1" InstallerVersion="301">
     <MajorUpgrade DowngradeErrorMessage="!(loc.DowngradeError)" />
     <MediaTemplate EmbedCab="yes" />
+    <Icon Id="kDrive.ico" SourceFile="$(desktop-kDriveDir)/build-windows/install/bin/kdrive-win.ico"/>
+    <Property Id="ARPPRODUCTICON" Value="kDrive.ico" />    
     <Feature Id="Main">
+      <ComponentGroupRef Id="App" />
       <ComponentGroupRef Id="DLLComponents" />
       <ComponentGroupRef Id="thirdPartyExeComponents" />
       <ComponentGroupRef Id="SyncExcludeComponents" />
@@ -14,26 +18,28 @@
       <ComponentGroupRef Id="PlatformsComponents" />
       <ComponentGroupRef Id="TLSComponents" />
       <ComponentGroupRef Id="TranslationsComponents" />
+      <ComponentGroupRef Id="WebEngineLocalesComponents" />
       <ComponentGroupRef Id="PositionComponents" />
       <ComponentGroupRef Id="RessourcesComponents" />
       <ComponentGroupRef Id="StyleComponents" />
       <ComponentGroupRef Id="ShellExtComponents" />
     </Feature>
+    
     <CustomAction Id="InstallExplorerExtension"
-                  Directory="System64Folder"
-                  ExeCommand="WindowsPowerShell\v1.0\powershell.exe -NoLogo -NonInteractive -InputFormat None -NoProfile -Commande &quot;Add-AppxPackage [SHELLEXTFOLDER]FileExplorerExtensionPackage_$(shortVersion).0_x64_arm64.msixbundle  -ForceApplicationShutdown -ForceUpdateFromAnyVersion&quot;" 
+                  Directory="APPXFOLDER"
+                  ExeCommand="powershell.exe -WindowStyle hidden -ExecutionPolicy Bypass -Command &quot;Add-AppxPackage FileExplorerExtensionPackage_$(shortVersion).0_x64_arm64.msixbundle  -ForceApplicationShutdown -ForceUpdateFromAnyVersion&quot;" 
                   Execute="deferred" 
-                  Impersonate="no" 
-                  Return="asyncWait"/>
+                  Impersonate="yes" 
+                  Return="check"/>
     <CustomAction Id="UninstallExplorerExtension"
-                  Directory="System64Folder"
-                  ExeCommand="WindowsPowerShell\v1.0\powershell.exe -NoLogo -NonInteractive -InputFormat None -NoProfile -File &quot;[SHELLEXTFOLDER]Uninstall.ps1&quot;" 
+                  Directory="APPXFOLDER"
+                  ExeCommand="powershell.exe -WindowStyle hidden -ExecutionPolicy Bypass -File &quot;[APPXFOLDER]Uninstall.ps1&quot;" 
                   Execute="deferred"
-                  Impersonate="no"
-                  Return="asyncWait"/>
+                  Impersonate="yes"
+                  Return="check"/> 
     <InstallExecuteSequence>
       <Custom Action="InstallExplorerExtension" Before="InstallFinalize" Condition="NOT REMOVE=&quot;ALL&quot;"/>
-      <Custom Action="UninstallExplorerExtension" Before="InstallFinalize" Condition="REMOVE=&quot;ALL&quot;"/>
+      <Custom Action="UninstallExplorerExtension" After="InstallInitialize" Condition="REMOVE=&quot;ALL&quot;"/>
     </InstallExecuteSequence>
   </Package>
 </Wix>
